#17642 closed bug (fixed)
System crashes to kernel debugger a few seconds after booting to desktop
Reported by: | Cacodemon345 | Owned by: | nobody |
---|---|---|---|
Priority: | blocker | Milestone: | Unscheduled |
Component: | System/Kernel | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | #17643, #17650 | |
Platform: | All |
Description
The system now hits an assert in the kernel allocator a few seconds after booting to the desktop when it attempts to play a sound.
Attachments (1)
Change History (8)
by , 11 months ago
Attachment: | IMG_20220310_164925.jpg added |
---|
comment:3 by , 11 months ago
got exactly the same problem here, running hrev55937 (x86_64) in a VirtualBox vm.
comment:5 by , 11 months ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Fixed in hrev55938. I tested with the @minimum image yesterday before I pushed the relevant commit but apparently that does not trigger some of those codepaths...
comment:6 by , 11 months ago
Blocking: | 17643 added |
---|
comment:7 by , 11 months ago
Blocking: | 17650 added |
---|
Note:
See TracTickets
for help on using tickets.
KDL backtrace