kernel/vfs: Fix mismatched frees of vnodes.

Regression from yesterday's commit. Fixes #17642.
Hopefully this is all of them.